--- a/projects/ngiw-core-ui/src/lib/components/table/header/header-cell/header-cell.component.scss
+++ b/projects/ngiw-core-ui/src/lib/components/table/header/header-cell/header-cell.component.scss
@@ -1,9 +1,10 @@
 .header-cell-wrapper {
+
     div {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100%;
+        min-height: 30px;
         flex-wrap: nowrap;
         &.show-filter-sorter {
             cursor:pointer;
@@ -15,6 +16,11 @@
             }
             .header-label {
                 flex-grow: 1;
+                height:100%;
+                text-align: center;
+            }
+            .filter-icon {
+                font-size: 8px;
             }
             .undo-filter {
                 font-size: 17px;
