--- a/projects/ngiw-core-ui/src/lib/components/table/table.component.html
+++ b/projects/ngiw-core-ui/src/lib/components/table/table.component.html
@@ -49,7 +49,7 @@
                     <mat-progress-bar  mode="indeterminate"></mat-progress-bar>
             </div>
             <tr  style = "overflow:show" *ngFor="let row of YRange" > 
-                <td  class = "td-sticky" 
+                <td class = "td-sticky" 
                 *ngIf= "ngiwFirstColumnFixed">
                     <ng-container
                         *ngIf="bodyTemplateRef &&  ngiwRows - row  + YRangeBegin > 0"
@@ -59,7 +59,7 @@
                     </ng-container>
                 </td>
                 <td  *ngFor= "let col of XRange"
-                     tabindex="0"
+                   
                      (contextmenu) = "handleContextMenu($event,row,col)"
                      cdkOverlayOrigin
                      #trigger="cdkOverlayOrigin"
@@ -114,7 +114,9 @@
                         width:96%;
                         position: absolute;
                         z-index: 99;">
-                    
+                                    <!--tabindex="0"                [style.boxShadow] = "
+                    (activeCell?.row === row && activeCell?.col === col)?
+                       ('inset 0px 0px 0px 1px blue'):('')"  
                 </div>
                      [style.boxShadow] = "(focusCoordinates.row === row  + YRangeBegin 
                                         && focusCoordinates.col === col + XRangeBegin)
