--- a/projects/ngiw-core-ui/src/lib/components/pretify/text-prettify/text-prettify.component.html
+++ b/projects/ngiw-core-ui/src/lib/components/pretify/text-prettify/text-prettify.component.html
@@ -1,3 +1,3 @@
-<span>{{text | ngiwHighlightPrefix: hightlightPattern}}</span>
-<span class="highlight">{{text | ngiwHighlight: hightlightPattern}}</span>
-<span>{{text | ngiwHighlightSuffix: hightlightPattern}} </span>
+<span>{{ngiwText | ngiwHighlightPrefix: ngiwHightlightPattern}}</span>
+<span class="highlight">{{ngiwText | ngiwHighlight: ngiwHightlightPattern}}</span>
+<span>{{ngiwText | ngiwHighlightSuffix: ngiwHightlightPattern}} </span>
