--- a/projects/ngiw-core-ui/src/lib/components/select/multiselect/multiselect.component.html
+++ b/projects/ngiw-core-ui/src/lib/components/select/multiselect/multiselect.component.html
@@ -1,6 +1,7 @@
 <div class = "tree-select" [style.width] = "width ?? 200">
-    <nz-cascader [(ngModel)]="values" 
-                [nzOptions]="options" 
+    <nz-cascader [(ngModel)]="ngiwValues" 
+                [nzOptions]="ngiwOptions" 
+                [placeholder] = "ngiwPlaceholder"
                 (ngModelChange)="onChanges($event)">
     </nz-cascader>
   </div>
