--- a/projects/ngiw-core-ui/src/lib/components/table-ui-utils/filter-sorter/filter-sorter/filter-sorter.component.html
+++ b/projects/ngiw-core-ui/src/lib/components/table-ui-utils/filter-sorter/filter-sorter/filter-sorter.component.html
@@ -25,7 +25,7 @@
           <mat-spinner diameter="20"></mat-spinner>
         </div>
         <div *ngIf="!ngiwIsCreatingList" class="filter-list">
-          <div style = "font-size:12px" *ngFor="let search of tmpSearchList">
+          <div *ngFor="let search of tmpSearchList">
             <mat-checkbox [checked]="search.checked" (change)="search.checked = $event.checked;isFilterError = false;">
               <span>
                 {{search.label}}
