--- a/projects/ngiw-core-ui/src/lib/components/select/multiselect/multiselect.component.html
+++ b/projects/ngiw-core-ui/src/lib/components/select/multiselect/multiselect.component.html
@@ -1,5 +1,5 @@
 <div class = "tree-select" [style.width] = "width ?? 200">
-    <nz-cascader [(ngModel)]="ngiwValues" 
+    <nz-cascader [(ngModel)]="ngiwValue" 
                 [nzOptions]="ngiwOptions" 
                 [placeholder] = "ngiwPlaceholder"
                 (ngModelChange)="onChanges($event)">
