--- a/projects/showcase-app/src/app/app.component.html
+++ b/projects/showcase-app/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
-  <ngiw-select 
+ <!--
+ <ngiw-select 
     [ngiwValue]="selectedValue" 
     [ngiwPlaceholder]="'Select an option'" 
     [ngiwOptions]="options" 
@@ -13,4 +14,6 @@
 
     <p>{{ selectedValue || '' }}</p>
   </div>
+ -->
+ <router-outlet></router-outlet>
 </div>
