--- a/projects/showcase-app/src/styles.scss
+++ b/projects/showcase-app/src/styles.scss
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../../../node_modules/ng-zorro-antd/ng-zorro-antd.min.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family:VarelaRound-Regular, "Helvetica Neue", sans-serif; }
+html, body { 
+    height: 100%;
+    direction: rtl;
+ }
+body { margin: 0; font: 14px 'VarelaRound-Regular', sans-serif;}
 
 @font-face {
     font-family: VarelaRound-Regular;
-    src: url(../src/assets/fonts/VarelaRound-Regular.ttf);
+    src: url(./assets/fonts/VarelaRound-Regular.ttf);
 }
 
 
