--- a/projects/ngiw-common/core-ui/src/components/select/multiselect/multiselect.component.html
+++ b/projects/ngiw-common/core-ui/src/components/select/multiselect/multiselect.component.html
@@ -1,4 +1,4 @@
-<div class = "tree-select" [style.width] = "width ?? 200">
+<div class = "tree-select" [style.width] = "ngiwWidth ?? 200">
     <nz-cascader [(ngModel)]="ngiwValue" 
                 [nzOptions]="ngiwOptions" 
                 [nzPlaceHolder]="ngiwPlaceholder"
