--- a/projects/ngiw-common/core-ui/src/components/table-ui-utils/filter-sorter/filter-sorter/filter-sorter.component.html
+++ b/projects/ngiw-common/core-ui/src/components/table-ui-utils/filter-sorter/filter-sorter/filter-sorter.component.html
@@ -1,3 +1,6 @@
+<!-- eslint-disable @angular-eslint/template/label-has-associated-control -->
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <div class="filter-sorter-wrapper">
     <div class="tab">
       <div nzTooltipTitle=" חפש לפי עמודה זו" nzTooltipPlacement="top" nz-tooltip 
