--- a/projects/ngiw-common/core-ui/src/components/upload/file-upload/file-upload.component.html
+++ b/projects/ngiw-common/core-ui/src/components/upload/file-upload/file-upload.component.html
@@ -25,6 +25,6 @@
   (nzOnCancel)="previewVisible = false"
   >
     <ng-template #modalContent>
-        <img [src]="previewImage" [ngStyle]="{ width: '100%' }" />
+        <img [src]="previewImage" alt = "" [ngStyle]="{ width: '100%' }" />
     </ng-template>
 </nz-modal>
