--- a/projects/ngiw-common/core-ui/src/components/pretify/text-prettify/text-prettify.component.html
+++ b/projects/ngiw-common/core-ui/src/components/pretify/text-prettify/text-prettify.component.html
@@ -1,3 +1,5 @@
-<span>{{ngiwText | ngiwHighlightPrefix: ngiwHightlightPattern}}</span>
-<span class="highlight">{{ngiwText | ngiwHighlight: ngiwHightlightPattern}}</span>
-<span>{{ngiwText | ngiwHighlightSuffix: ngiwHightlightPattern}} </span> 
+<span>{{ ngiwText() | ngiwHighlightPrefix: ngiwHightlightPattern() }}</span>
+<span class="highlight">{{
+  ngiwText() | ngiwHighlight: ngiwHightlightPattern()
+}}</span>
+<span>{{ ngiwText() | ngiwHighlightSuffix: ngiwHightlightPattern() }} </span>
