--- a/projects/ngiw-common/core-ui/src/components/select/multiselect/multiselect.component.html
+++ b/projects/ngiw-common/core-ui/src/components/select/multiselect/multiselect.component.html
@@ -1,7 +1,9 @@
-<div class = "tree-select" [style.width] = "ngiwWidth ?? 200">
-    <nz-cascader [(ngModel)]="ngiwValue" 
-                [nzOptions]="ngiwOptions" 
-                [nzPlaceHolder]="ngiwPlaceholder"
-                (ngModelChange)="onValueChanges($event)">
-    </nz-cascader>
-  </div>
+<div class="tree-select" [style.width]="ngiwWidth() ?? 200">
+  <nz-cascader
+    [(ngModel)]="ngiwValue"
+    [nzOptions]="ngiwOptions()"
+    [nzPlaceHolder]="ngiwPlaceholder()"
+    (ngModelChange)="onValueChanges($event)"
+  >
+  </nz-cascader>
+</div>
