--- a/projects/ngiw-common/core-ui/src/components/select/single-select/single-select.component.html
+++ b/projects/ngiw-common/core-ui/src/components/select/single-select/single-select.component.html
@@ -1,12 +1,14 @@
-<nz-select 
-   nzShowSearch 
-   nzAllowClear 
-   [(ngModel)] = "ngiwValue"
-   (ngModelChange)="onValueChanges($event)"
-   [nzPlaceHolder]="ngiwPlaceholder" 
+<nz-select
+  nzShowSearch
+  nzAllowClear
+  [(ngModel)]="ngiwValue"
+  (ngModelChange)="onValueChanges($event)"
+  [nzPlaceHolder]="ngiwPlaceholder()"
 >
- <nz-option *ngFor="let option of ngiwOptions" 
-          [nzLabel]="getLabel(option)"  
-          [nzValue]="getValue(option)"
-         ></nz-option>
+  @for (option of ngiwOptions(); track option) {
+    <nz-option
+      [nzLabel]="getLabel(option)"
+      [nzValue]="getValue(option)"
+    ></nz-option>
+  }
 </nz-select>
