--- a/projects/ngiw-common/core-ui/src/components/table-ui-utils/filter-sorter/filter-sorter/filter-sorter.component.html
+++ b/projects/ngiw-common/core-ui/src/components/table-ui-utils/filter-sorter/filter-sorter/filter-sorter.component.html
@@ -2,56 +2,79 @@
 <!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
 <!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <div class="filter-sorter-wrapper">
-    <div class="tab">
-      <div nzTooltipTitle=" חפש לפי עמודה זו" nzTooltipPlacement="top" nz-tooltip 
-        [style.backgroundColor]="(section === 'filter')?('rgba(134, 245, 69, 0.3)'):('')" mat-raised>
-        <mat-icon>
-          search
-       </mat-icon>
-      </div>
+  <div class="tab">
+    <div
+      nzTooltipTitle=" חפש לפי עמודה זו"
+      nzTooltipPlacement="top"
+      nz-tooltip
+      [style.backgroundColor]="
+        section === 'filter' ? 'rgba(134, 245, 69, 0.3)' : ''
+      "
+      mat-raised
+    >
+      <mat-icon> search </mat-icon>
     </div>
-  
-    <mat-divider></mat-divider>
-  
-    <div class="section-filter" *ngIf="section === 'filter'">
+  </div>
+
+  <mat-divider></mat-divider>
+
+  @if (section === "filter") {
+    <div class="section-filter">
       <div>
         <div>
           <nz-input-group nzPrefixIcon="user">
-            <input (input) = "onInputSearch($event);"
-                   autocomplete="off" 
-                    id="input-filter" 
-                    [placeholder]="translatePrefix + 'searchFromList' | ngiwTranslate"
-                    nz-input />
-           </nz-input-group>
+            <input
+              (input)="onInputSearch($event)"
+              autocomplete="off"
+              id="input-filter"
+              [placeholder]="translatePrefix + 'searchFromList' | ngiwTranslate"
+              nz-input
+            />
+          </nz-input-group>
         </div>
         <nz-divider></nz-divider>
-        <div class = "filter-list-is-creating" *ngIf="ngiwIsCreatingList">
-          <mat-spinner diameter="20"></mat-spinner>
-        </div>
-        <div *ngIf="!ngiwIsCreatingList" class="filter-list">
-          <div *ngFor="let search of tmpSearchList">
-            <label 
-            (ngModelChange)="search.checked = $event.checked;isFilterError = false;" 
-             [(ngModel)]="search.checked"
-              nz-checkbox 
-              (click)="$event.stopPropagation()" 
-             >
-             {{search.label}}
-           </label>
+        @if (ngiwIsCreatingList()) {
+          <div class="filter-list-is-creating">
+            <mat-spinner diameter="20"></mat-spinner>
           </div>
-        </div>
+        }
+        @if (!ngiwIsCreatingList()) {
+          <div class="filter-list">
+            @for (search of tmpSearchList; track search) {
+              <div>
+                <label
+                  (ngModelChange)="
+                    search.checked = $event.checked; isFilterError = false
+                  "
+                  [(ngModel)]="search.checked"
+                  nz-checkbox
+                  (click)="$event.stopPropagation()"
+                >
+                  {{ search.label }}
+                </label>
+              </div>
+            }
+          </div>
+        }
         <nz-divider></nz-divider>
         <div>
-          <button nz-button nzType="primary" (click)="onFilter()">{{ translatePrefix + 'search' | ngiwTranslate}}</button>
+          <button nz-button nzType="primary" (click)="onFilter()">
+            {{ translatePrefix + "search" | ngiwTranslate }}
+          </button>
         </div>
-        <div *ngIf="isFilterError" >
+        @if (isFilterError) {
           <div>
-            <mat-icon>error_outline</mat-icon>
+            <div>
+              <mat-icon>error_outline</mat-icon>
+            </div>
+            <div>
+              <span>{{
+                translatePrefix + "chooseAtLeastOne" | ngiwTranslate
+              }}</span>
+            </div>
           </div>
-          <div>
-            <span>{{ translatePrefix + 'chooseAtLeastOne' | ngiwTranslate}}</span>
-          </div>
-        </div>
+        }
       </div>
     </div>
-  </div>
+  }
+</div>
