--- a/projects/ngiw-common/core-ui/src/components/table/table.component.html
+++ b/projects/ngiw-common/core-ui/src/components/table/table.component.html
@@ -1,131 +1,159 @@
 <!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
 <!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
-<div  [id] = "id"
-     (mouseup) = "onMouseUp()"
-     ngiwVirtualScrollingX 
-     ngiwVirtualScrollingY
-     [ngiwArrowsKeysObservable] = "arrowsKeysObservable" 
-     [ngiwRecordsLength] = "ngiwRows"
-     [ngiwFirstColumnFixed] = "ngiwFirstColumnFixed"
-     [ngiwColumnsLength] = "ngiwCols"
-     [style.height] = "'500px'"
-     [style.minHeight] = "'500px'"
-     [style.maxHeight] = "(ngiwHeight) ?? 500"
-     [style.width] = "ngiwWidth || '100%'"
-     (ngiwGetVirtualContainersWidths) = "onGetContainersWidths($event)"
-     (ngiwGetYRange) = "onGetYRange($event)"
-     (ngiwGetXRange) = "onGetXRange($event)"
-     (ngiwIsLoading) = "onVirtualLoading($event)"
-     class = "ngiw-table-wrapper scroll"  
-     >
-    <div>
-        <table>
-            <tr>
-                <th class = "th-sticky" 
-                    *ngIf= "ngiwFirstColumnFixed">
-                        <ng-container
-                        *ngIf="headerTemplateRef"
-                        [ngTemplateOutlet]="headerTemplateRef"
-                        [ngTemplateOutletContext]="{$implicit:0}"
-                        >
-                        </ng-container>
-                </th>
-                <th [style.minWidth] = "getThWidth(col)"
-                    [style.width] = "getThWidth(col)"
-                    [style.maxWidth] = "getThWidth(col)"
-                    class = "ngiwThForVS"
-                    *ngFor= "let col of XRange">
-                        <div (ngiwResizable) ="onResize($event,col)"
-                            class = "resizable">
-                        </div>
-                        <ng-container
-                        *ngIf="headerTemplateRef"
-                        [ngTemplateOutlet]="headerTemplateRef"
-                        [ngTemplateOutletContext]="{$implicit:col + XRangeBegin}"
-                        >
-                        </ng-container>          
-                </th>
-            </tr>
-            <div *ngIf = "YRange && YRange.length > 0" id = "virtual-container-before"></div>
-            <div *ngIf = "ngiwIsAdding">
-                    <mat-progress-bar  mode="indeterminate"></mat-progress-bar>
-            </div>
-            <tr  style = "overflow:show" *ngFor="let row of YRange" > 
-                <td class = "td-sticky" 
-                *ngIf= "ngiwFirstColumnFixed">
+<div
+  [id]="id"
+  (mouseup)="onMouseUp()"
+  ngiwVirtualScrollingX
+  ngiwVirtualScrollingY
+  [ngiwArrowsKeysObservable]="arrowsKeysObservable"
+  [ngiwRecordsLength]="ngiwRows()"
+  [ngiwFirstColumnFixed]="ngiwFirstColumnFixed()"
+  [ngiwColumnsLength]="ngiwCols()"
+  [style.height]="'500px'"
+  [style.minHeight]="'500px'"
+  [style.maxHeight]="ngiwHeight() ?? 500"
+  [style.width]="ngiwWidth() || '100%'"
+  (ngiwGetVirtualContainersWidths)="onGetContainersWidths($event)"
+  (ngiwGetYRange)="onGetYRange($event)"
+  (ngiwGetXRange)="onGetXRange($event)"
+  (ngiwIsLoading)="onVirtualLoading($event)"
+  class="ngiw-table-wrapper scroll"
+>
+  <div>
+    <table>
+      <tr>
+        @if (ngiwFirstColumnFixed()) {
+          <th class="th-sticky">
+            @if (headerTemplateRef) {
+              <ng-container
+                [ngTemplateOutlet]="headerTemplateRef"
+                [ngTemplateOutletContext]="{ $implicit: 0 }"
+              >
+              </ng-container>
+            }
+          </th>
+        }
+        @for (col of XRange; track col) {
+          <th
+            [style.minWidth]="getThWidth(col)"
+            [style.width]="getThWidth(col)"
+            [style.maxWidth]="getThWidth(col)"
+            class="ngiwThForVS"
+          >
+            <div
+              (ngiwResizable)="onResize($event, col)"
+              class="resizable"
+            ></div>
+            @if (headerTemplateRef) {
+              <ng-container
+                [ngTemplateOutlet]="headerTemplateRef"
+                [ngTemplateOutletContext]="{ $implicit: col + XRangeBegin }"
+              >
+              </ng-container>
+            }
+          </th>
+        }
+      </tr>
+      @if (YRange && YRange.length > 0) {
+        <div id="virtual-container-before"></div>
+      }
+      @if (ngiwIsAdding()) {
+        <div>
+          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </div>
+      }
+      @for (row of YRange; track row) {
+        <tr style="overflow: show">
+          @if (ngiwFirstColumnFixed()) {
+            <td class="td-sticky">
+              @if (bodyTemplateRef && ngiwRows() - row + YRangeBegin > 0) {
+                <ng-container
+                  [ngTemplateOutlet]="bodyTemplateRef"
+                  [ngTemplateOutletContext]="{ row: row + YRangeBegin, col: 0 }"
+                >
+                </ng-container>
+              }
+            </td>
+          }
+          <!--(contextmenu) = "handleContextMenu($event,row,col)"-->
+          @for (col of XRange; track col) {
+            <td
+              cdkOverlayOrigin
+              #trigger="cdkOverlayOrigin"
+              (click)="onFocus(row, col)"
+              (focusin)="onFocus(row, col)"
+            >
+              <ng-template
+                cdkConnectedOverlay
+                [cdkConnectedOverlayOrigin]="trigger"
+                [cdkConnectedOverlayPositions]="positions"
+                [cdkConnectedOverlayOpen]="isOverlayOpen(row, col)"
+                (overlayOutsideClick)="closeOverlay()"
+              >
+                <div (click)="closeOverlay()" class="_overlay">
+                  @if (showCloseOverlay(row)) {
                     <ng-container
-                        *ngIf="bodyTemplateRef &&  ngiwRows - row  + YRangeBegin > 0"
-                        [ngTemplateOutlet]="bodyTemplateRef"
-                        [ngTemplateOutletContext]="{row:row  + YRangeBegin, col:0}"
+                      [ngTemplateOutlet]="contextMenuTemplateRef"
+                      [ngTemplateOutletContext]="{
+                        row: row + YRangeBegin,
+                        col: col + XRangeBegin
+                      }"
                     >
                     </ng-container>
-                </td>
-                                     <!--(contextmenu) = "handleContextMenu($event,row,col)"-->
-                <td  *ngFor= "let col of XRange"                   
-
-                     cdkOverlayOrigin
-                     #trigger="cdkOverlayOrigin"
-                    (click) = "onFocus(row ,col)"
-                    (focusin) = "onFocus(row,col)"
-                >
-                <ng-template
-                    cdkConnectedOverlay
-                    [cdkConnectedOverlayOrigin]="trigger"
-                    [cdkConnectedOverlayPositions] = "positions"
-                    [cdkConnectedOverlayOpen]="isOverlayOpen(row,col)"
-                    (overlayOutsideClick) = "closeOverlay()"
-                    >   
-                    <div (click) = "closeOverlay()" class = "_overlay">
-                        <ng-container
-                        *ngIf="showCloseOverlay(row)"
-                        [ngTemplateOutlet]="contextMenuTemplateRef"
-                        [ngTemplateOutletContext]="{row:row  + YRangeBegin,col:col + XRangeBegin}"
-                            >
-                        </ng-container>  
-                    </div>
-                </ng-template>
-                <ng-container
-                    *ngIf="bodyTemplateRef &&  ngiwRows - row  + YRangeBegin > 0"
-                    [ngTemplateOutlet]="bodyTemplateRef "
-                    [ngTemplateOutletContext] = "{row:row  + YRangeBegin, col:col + XRangeBegin}"
-                    >
-                </ng-container>   
-             </td> 
-           </tr>
-            <div *ngIf = "YRange && YRange.length > 0" id = "virtual-container-after">
-                <div *ngIf = "isVirtualLoading">
-                    <mat-progress-bar  mode="indeterminate"></mat-progress-bar>
+                  }
                 </div>
+              </ng-template>
+              @if (bodyTemplateRef && ngiwRows() - row + YRangeBegin > 0) {
+                <ng-container
+                  [ngTemplateOutlet]="bodyTemplateRef"
+                  [ngTemplateOutletContext]="{
+                    row: row + YRangeBegin,
+                    col: col + XRangeBegin
+                  }"
+                >
+                </ng-container>
+              }
+            </td>
+          }
+        </tr>
+      }
+      @if (YRange && YRange.length > 0) {
+        <div id="virtual-container-after">
+          @if (isVirtualLoading) {
+            <div>
+              <mat-progress-bar mode="indeterminate"></mat-progress-bar>
             </div>
-       </table> 
-    </div>
-    <div id = "resize-bar"></div>
+          }
+        </div>
+      }
+    </table>
+  </div>
+  <div id="resize-bar"></div>
 </div>
 
 <nz-back-top [nzTarget]="table"></nz-back-top>
 
 <!--
-    
-    <div 
-                    *ngIf = "isScrolling"
-                    style = "
-                    background-color: rgba(210, 227, 233, 0.19);
-                        left:2%;
-                        top:2%;
-                        height:96%;
-                        width:96%;
-                        position: absolute;
-                        z-index: 99;">
-                                    <!--tabindex="0"                [style.boxShadow] = "
-                    (activeCell?.row === row && activeCell?.col === col)?
-                       ('inset 0px 0px 0px 1px blue'):('')"  
-                </div>
-                     [style.boxShadow] = "(focusCoordinates.row === row  + YRangeBegin 
-                                        && focusCoordinates.col === col + XRangeBegin)
-                            ?
-                        ('inset 0px 0px 0px 1px blue'):('')"
-                    [style.boxShadow] = "(focusCoordinates.row === row  + YRangeBegin 
-                                        && focusCoordinates.col === XRangeBegin)
-                            ?
-                        ('inset 0px 0px 0px 1px blue'):('')"-->
 
+<div
+  *ngIf = "isScrolling"
+  style = "
+  background-color: rgba(210, 227, 233, 0.19);
+  left:2%;
+  top:2%;
+  height:96%;
+  width:96%;
+  position: absolute;
+  z-index: 99;">
+  <!--tabindex="0"                [style.boxShadow] = "
+  (activeCell?.row === row && activeCell?.col === col)?
+  ('inset 0px 0px 0px 1px blue'):('')"
+</div>
+[style.boxShadow] = "(focusCoordinates.row === row  + YRangeBegin
+&& focusCoordinates.col === col + XRangeBegin)
+?
+('inset 0px 0px 0px 1px blue'):('')"
+[style.boxShadow] = "(focusCoordinates.row === row  + YRangeBegin
+&& focusCoordinates.col === XRangeBegin)
+?
+('inset 0px 0px 0px 1px blue'):('')"-->
