--- a/projects/ngiw-common/core-ui/src/components/upload/file-upload/file-upload.component.html
+++ b/projects/ngiw-common/core-ui/src/components/upload/file-upload/file-upload.component.html
@@ -1,30 +1,29 @@
-<div class = 'upload-wrapper'>
-    <nz-upload 
-        [nzAction]="ngiwUploadPath" 
-        [nzAccept] = "ngiwFormat"
-        [nzListType]="ngiwDisplay"
-        [nzLimit] = "isFilesUploadUnlimited() ? 0 : getMaxFilesToUpload()"
-        [nzMultiple] = "isMultiSelectEnabled()"
-        [(nzFileList)]="ngiwFiles" 
-        [nzShowButton]="canUploadMoreFiles()" 
-        [nzPreview]="handlePreview"
-        (nzChange) = "onUploadStateChanged()"
-        >
-        <div>            
-            <div> <span nz-icon nzType="plus"></span> {{ ngiwAddFileLabel }} </div>
-        </div>
-      </nz-upload>
+<div class="upload-wrapper">
+  <nz-upload
+    [nzAction]="ngiwUploadPath()"
+    [nzAccept]="ngiwFormat()"
+    [nzListType]="ngiwDisplay()"
+    [nzLimit]="isFilesUploadUnlimited() ? 0 : getMaxFilesToUpload()"
+    [nzMultiple]="isMultiSelectEnabled()"
+    [(nzFileList)]="ngiwFiles"
+    [nzShowButton]="canUploadMoreFiles()"
+    [nzPreview]="handlePreview"
+    (nzChange)="onUploadStateChanged()"
+  >
+    <div>
+      <div><span nz-icon nzType="plus"></span> {{ ngiwAddFileLabel() }}</div>
+    </div>
+  </nz-upload>
 </div>
 
-
 <!--Image preview-->
-<nz-modal 
-  [nzVisible]="previewVisible" 
-  [nzContent]="modalContent" 
+<nz-modal
+  [nzVisible]="previewVisible"
+  [nzContent]="modalContent"
   [nzFooter]="null"
   (nzOnCancel)="previewVisible = false"
-  >
-    <ng-template #modalContent>
-        <img [src]="previewImage" alt = "" [ngStyle]="{ width: '100%' }" />
-    </ng-template>
+>
+  <ng-template #modalContent>
+    <img [src]="previewImage" alt="" [ngStyle]="{ width: '100%' }" />
+  </ng-template>
 </nz-modal>
