cdk table and form

--- a/projects/ngiw-common/core-ui/src/components/select/multiselect/multiselect.component.html
+++ b/projects/ngiw-common/core-ui/src/components/select/multiselect/multiselect.component.html
@@ -1,6 +1,6 @@
 <div class="tree-select" [style.width]="ngiwWidth() ?? 200">
   <nz-cascader
-    [(ngModel)]="ngiwValue"
+    [(ngModel)]="value"
     [nzOptions]="ngiwOptions()"
     [nzPlaceHolder]="ngiwPlaceholder()"
     (ngModelChange)="onValueChanges($event)"
