--- a/projects/ngiw-common/core-ui/src/components/upload/file-upload/file-upload.component.html
+++ b/projects/ngiw-common/core-ui/src/components/upload/file-upload/file-upload.component.html
@@ -5,7 +5,7 @@
     [nzListType]="ngiwDisplay()"
     [nzLimit]="isFilesUploadUnlimited() ? 0 : getMaxFilesToUpload()"
     [nzMultiple]="isMultiSelectEnabled()"
-    [(nzFileList)]="ngiwFiles"
+
     [nzShowButton]="canUploadMoreFiles()"
     [nzPreview]="handlePreview"
     (nzChange)="onUploadStateChanged()"
@@ -27,3 +27,4 @@
     <img [src]="previewImage" alt="" [ngStyle]="{ width: '100%' }" />
   </ng-template>
 </nz-modal>
+    <!--[(nzFileList)]="ngiwFiles"-->
